--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Cheney School Creative Club</title>
+  </head>
+  <body>
+    <h1 style="text-align:center;"><u><b>Creative Club</b></u></h1>
+  </body>
+</html>
