--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Cheney School Creative Club</title>
   </head>
   <body>
-    <h1 style="text-align:center;"><u><b>Creative Club</b></u></h1>
+    <h1><u><b>Creative Club</b></u></h1>
   </body>
 </html>
