--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Cheney School Creative Club</title>
+    <style>
+      h1 {text-align: center;
+          background-color: orange;
+          font-family: CourierNew;}
+    </style>
   </head>
   <body>
     <h1><u><b>Creative Club</b></u></h1>
