--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <h1><u><b>Creative Club</b></u></h1>
+    <h1><u><b>Cheney School Creative Club</b></u></h1>
   </body>
 </html>
