--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style>
       h1 {text-align: center;
           background-color: orange;
-          font-family: CourierNew;}
+          font-family: "Copperplate", "Papyrus", fantasy;}
+
     </style>
   </head>
   <body>
