--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       h1 {text-align: center;
           background-color: orange;
           font-family: "Copperplate", "Papyrus", fantasy;}
-
+      body {background-color: darkseagreen}
     </style>
   </head>
   <body>
