--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
           background-color: orange;
           font-family: "Copperplate", "Papyrus", fantasy;}
       body {background-color: darkseagreen}
+      h2 {text-align: center;
+          background-color: royalblue;}
     </style>
   </head>
   <body>
     <h1><u><b>Cheney School Creative Club</b></u></h1>
+    <h2>Creations:</h2>
   </body>
 </html>
