--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <title>Cheney School Creative Club</title>
     <style>
       h1 {text-align: center;
-          background-color: orange;
-          font-family: "Copperplate", "Papyrus", fantasy;}
+          background-color: orange;}
       body {background-color: darkseagreen}
+          font-family: "Copperplate", "Papyrus", fantasy;}
       h2 {text-align: center;
           background-color: royalblue;}
     </style>
   </head>
   <body>
-    <h1><u><b>Cheney School Creative Club</b></u></h1>
-    <h2>Creations:</h2>
+    <h1><u><b>Cheney School Creative Club</u></h1><p>
+    <h3>Creative Club is an extra-curricular club for Years 7-8 at Cheney School.<br>
+      From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
+      This website showcases some of the fantastic projects made by our members.</h3><p>
+    <h2>Creations:</h2></b>
+    <h3></h3>
   </body>
 </html>
