--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <title>Cheney School Creative Club</title>
     <style>
-      h1 {text-align: center;
-          background-color: orange;}
+      h1 {background-color: orange;
+         font-family: "Copperplate", "Papyrus", fantasy;}
       body {background-color: darkseagreen}
-          font-family: "Copperplate", "Papyrus", fantasy;}
+          text-align: center;}
       h2 {text-align: center;
-          background-color: royalblue;}
+          background-color: royalblue;
+         font-family: "Copperplate", "Papyrus", fantasy;}
     </style>
   </head>
   <body>
-    <h1><u><b>Cheney School Creative Club</u></h1><p>
+    <h1><u><b>Cheney School Creative Club</b></u></h1><p>
     <h3>Creative Club is an extra-curricular club for Years 7-8 at Cheney School.<br>
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
-    <h2>Creations:</h2></b>
+    <h2><b>Creations:</h2></b><p>
     <h3></h3>
   </body>
 </html>
