--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Cheney School Creative Club</title>
     <style>
       h1 {background-color: orange;
-         font-family: "Copperplate", "Papyrus", fantasy;}
+          text-align: center;
+          font-family: "Copperplate", "Papyrus", fantasy;}
       body {background-color: darkseagreen}
-          text-align: center;}
+            text-align: center;}
       h2 {text-align: center;
           background-color: royalblue;
           font-family: "Copperplate", "Papyrus", fantasy;}
