--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       h1 {background-color: orange;
           text-align: center;
           font-family: "Copperplate", "Papyrus", fantasy;}
-      body {background-color: darkseagreen}
+      body {background-color: darkseagreen;}
             text-align: center;}
       h2 {text-align: center;
           background-color: royalblue;
