--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       body {background-color: darkseagreen;}
             text-align: center;}
       h2 {text-align: center;
-          background-color: royalblue;
+          background-color: dodgerblue;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      h3 {text-align: center;
+          background-color: darksalmon;
           font-family: "Copperplate", "Papyrus", fantasy;}
     </style>
   </head>
