--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       h3 {text-align: center;
           background-color: darksalmon;
           font-family: "Copperplate", "Papyrus", fantasy;}
+      h4 {text-align: center;
+          background-color: darkslategrey;}
     </style>
   </head>
   <body>
@@ -22,6 +24,6 @@
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
     <h2><b>Creations:</h2></b><p>
-    <h3></h3>
+    <h4>Click on any image below to view the project.</h4><p>
   </body>
 </html>
