--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <h1><u><b>Cheney School Creative Club</b></u></h1><p>
-    <h3>Creative Club is an extra-curricular club for Years 7-8 at Cheney School.<br>
+    <h3>Creative Club is an extra-curricular club for Years 7-8 at Cheney School, Oxford.<br>
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
     <h2><b>Creations:</h2></b><p>
