--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
       body {background-color: darkseagreen;}
             text-align: center;}
       h2 {text-align: center;
-          background-color: dodgerblue;
+          background-color: deepskyblue;
           font-family: "Copperplate", "Papyrus", fantasy;}
       h3 {text-align: center;
           background-color: darksalmon;
           font-family: "Copperplate", "Papyrus", fantasy;}
       h4 {text-align: center;
-          background-color: darkslategrey;}
+          background-color: lightgrey;
+          font-family: "Copperplate", "Papyrus", fantasy;}
     </style>
   </head>
   <body>
