--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
       h1 {background-color: orange;
           text-align: center;
           font-family: "Copperplate", "Papyrus", fantasy;}
-      body {background-color: darkseagreen;}
+      body {background-color: darkseagreen;
             text-align: center;}
-
-
-
-      
       h3 {text-align: center;
           background-color: darksalmon;
           font-family: "Copperplate", "Papyrus", fantasy;}
