--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
     <h4>Click on any image below to view the project.</h4><p> 
-    <img src="CreativeClubPoster.jpg" width="600" height="300" style="border: 2px solid black;"/>
+    <img src="CreativeClubPoster.jpg" width="600" height="300" style="border: 2px white;"/>
   </body>
 </html>
