--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <h3>Creative Club is an extra-curricular club for Years 7-8 at Cheney School, Oxford.<br>
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
-    <h4>Click on any image below to view the project.</h4><p> 
-    <img src="CreativeClubPoster.jpg" width="600" height="300" style="border: 2px solid white;"/>
+    <h4>Click on any image below to view the project.</h4><p>
+    <a href=
+    <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="600" height="300" style="border: 2px solid white;"/>
   </body>
 </html>
