--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       From comics to coding and stories to drawings, anything goes at this club - as long as its creative!<br>
       This website showcases some of the fantastic projects made by our members.</h3><p>
     <h4>Click on any image below to view the project.</h4><p>
-    <a href=
+    <a href="poster.html">
     <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="600" height="300" style="border: 2px solid white;"/>
+    </a>
   </body>
 </html>
