--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <a href="poster.html">
     <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="600" height="300" style="border: 2px solid white;"/>
     </a>
+    <a href="peterbros.html">
+    <img src="SuperPeterBros.png" title="Super Peter Bros" width="600" height="300" style="border: 2px solid white;"/>
+    </a>
   </body>
 </html>
