--- a/poster.html
+++ b/poster.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Creative Club Poster</title>
+    <style>
+      h1 {background-color: orange;
+          text-align: center;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      body {background-color: darkseagreen;
+            text-align: center;}
+      h3 {text-align: center;
+          background-color: darksalmon;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      h4 {text-align: center;
+          background-color: lightgrey;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+    </style>
+  </head>
+  <body>
+    <h1><u><b>Creative Club Poster</b></u></h1><p>
+    <h4>Digital art. Author remains anonymous.</h4><p>
+    <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="600" height="300"/>
+  </body>
+</html>
 
