--- a/poster.html
+++ b/poster.html
@@ -14,12 +14,22 @@
       h4 {text-align: center;
           background-color: lightgrey;
           font-family: "Copperplate", "Papyrus", fantasy;}
+      button1 {background-color: dodgerblue;
+              font-family: "Copperplate", "Papyrus", fantasy;}
+       button1 {background-color: lightgreen;
+              font-family: "Copperplate", "Papyrus", fantasy;}
     </style>
   </head>
   <body>
     <h1><u><b>Creative Club Poster</b></u></h1><p>
     <h4>Digital art. Author remains anonymous.</h4><p>
     <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="600" height="300"/>
+     <a div id="button1" href="CreativeClubPoster.jpg" download="CreativeClubPoster">
+        <button type="button"><h3>Download</h3></button>
+    </a>
+    <a div id="button2" href="index.html">
+        <button type="button"><h3>Return Home</h3></button>
+    </a>
   </body>
 </html>
 
