--- a/poster.html
+++ b/poster.html
@@ -14,16 +14,16 @@
       h4 {text-align: center;
           background-color: lightgrey;
           font-family: "Copperplate", "Papyrus", fantasy;}
-      button1 {background-color: dodgerblue;
+      button1 {
               font-family: "Copperplate", "Papyrus", fantasy;}
-       button1 {background-color: lightgreen;
+       button1 {
               font-family: "Copperplate", "Papyrus", fantasy;}
     </style>
   </head>
   <body>
     <h1><u><b>Creative Club Poster</b></u></h1><p>
     <h4>Digital art. Author remains anonymous.</h4><p>
-    <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="800" height="400"/>
+    <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="800" height="400"/><p>
      <a div id="button1" href="CreativeClubPoster.jpg" download="CreativeClubPoster">
         <button type="button"><h3>Download</h3></button>
     </a>
