--- a/poster.html
+++ b/poster.html
@@ -21,8 +21,8 @@
     <h1><u><b>Creative Club Poster</b></u></h1><p>
     <h4>Digital art. Author remains anonymous.</h4><p>
     <img src="CreativeClubPoster.jpg" title="Creative Club Poster" width="800" height="400"/><p>
-    <button href="CreativeClubPoster.jpg" download="CreativeClubPoster" type="button"><h3>Download</h3></button>
-    <button href="index.html" type="button"><h3>Return Home</h3></button>
+    <button type="button"><h3><a href="CreativeClubPoster.jpg" download="CreativeClubPoster">Download</a></h3></button>
+    <button type="button"><h3><a href="index.html">Return Home</a></h3></button>
   </body>
 </html>
 
