--- a/peterbros.html
+++ b/peterbros.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Super Peter Bros</title>
+    <style>
+      h1 {background-color: orange;
+          text-align: center;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      body {background-color: darkseagreen;
+            text-align: center;}
+      h3 {text-align: center;
+          background-color: darksalmon;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      h4 {text-align: center;
+          background-color: lightgrey;
+          font-family: "Copperplate", "Papyrus", fantasy;}
+      button1 {font-family: "Copperplate", "Papyrus", fantasy;}
+    </style>
+  </head>
+  <body>
+    <h1><u><b>Super Peter Bros</b></u></h1><p>
+    <h4>Digital art. Author remains anonymous.</h4><p>
+    <img src="Super Peter Bros.png" title="Creative Club Poster" width="750" height="400"/><p>
+    <button type="button"><h3><a href="SuperPeterBros.png" download="SuperPeterBros">Download</a></h3></button>
+    <button type="button"><h3><a href="index.html">Return Home</a></h3></button>
+  </body>
+</html>
