--- a/peterbros.html
+++ b/peterbros.html
@@ -20,7 +20,7 @@
   <body>
     <h1><u><b>Super Peter Bros</b></u></h1><p>
     <h4>Digital art. Author remains anonymous.</h4><p>
-    <img src="Super Peter Bros.png" title="Creative Club Poster" width="750" height="400"/><p>
+    <img src="SuperPeterBros.png" title="Super Peter Bros" width="750" height="400"/><p>
     <button type="button"><h3><a href="SuperPeterBros.png" download="SuperPeterBros">Download</a></h3></button>
     <button type="button"><h3><a href="index.html">Return Home</a></h3></button>
   </body>
