--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <a href="peterbros.html">
     <img src="SuperPeterBros.png" title="Super Peter Bros" width="600" height="300" style="border: 2px solid white;"/>
     </a>
+    <a href="universe.html">
+    <img src="RecipeForTheUniverse.jpg" title="Recipe for the Universe" width="300" height="700" style="border: 2px solid white;"/>
+    </a>
   </body>
 </html>
