--- a/universe.html
+++ b/universe.html
@@ -21,7 +21,7 @@
     <h1><u><b>Recipe for the Universe</b></u></h1><p>
     <h4>Hand drawn art. Author remains anonymous.</h4><p>
     <img src="RecipeForTheUniverse.jpg" title="Recipe for the Universe" width="900" height="350"/><p>
-    <button type="button"><h3><a href="CreativeClubPoster.jpg" download="CreativeClubPoster">Download</a></h3></button>
+    <button type="button"><h3><a href="RecipeForTheUniverse.jpg" download="RecipeForTHeUniverse">Download</a></h3></button>
     <button type="button"><h3><a href="index.html">Return Home</a></h3></button>
   </body>
 </html>
